Replace legacy Java EE method for Java 9 - Drop support for Java 7(#35)
* [Test] Java 1.9 patch

Signed-off-by: Ivan Ip <m@lifeho.me>

* Revert version tag
This version must compile and execute on or above Java 9 SE, as the classfile cannot be read by Java 8 or below.

Signed-off-by: Ivan Ip <m@lifeho.me>

* Revert to Java 8 for backward compatibility
This build requires Java 1.8 or up to be compiled or executed.

Signed-off-by: Ivan Ip <m@lifeho.me>

* Fix test cases typo

Signed-off-by: Ivan Ip <m@lifeho.me>

* Revert to 1.8 API as per requested for backward compatibility

Signed-off-by: Ivan Ip <m@lifeho.me>